<resources>
    <string name="app_name">Easy Laundry</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="splash_textview">Manage Laundry Items\non the go</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="item_1">Bed Sheet</string>
    <string name="item_2">Towel</string>
    <string name="item_3">Pillow Cover</string>
    <string name="item_4">Salwar</string>
    <string name="item_5">Lower</string>
    <string name="item_6">Nikkar</string>
    <string name="item_7">School Pant</string>
    <string name="item_8">Civil Pant</string>
    <string name="item_9">Jeans</string>
    <string name="item_10">Kurta</string>
    <string name="item_11">T-Shirt</string>
    <string name="item_12">School Shirt</string>
    <string name="item_13">Civil Shirt</string>
    <string name="item_14">Sweater</string>
    <string name="item_15">Jacket</string>
    <string name="item_16">Coat</string>
    <string name="item_17">Blanket</string>
    <string name="item_18">Scarves</string>
    <string-array name="laundry_items">
        <item>@string/item_1</item>
        <item>@string/item_2</item>
        <item>@string/item_3</item>
        <item>@string/item_4</item>
        <item>@string/item_5</item>
        <item>@string/item_6</item>
        <item>@string/item_7</item>
        <item>@string/item_8</item>
        <item>@string/item_9</item>
        <item>@string/item_10</item>
        <item>@string/item_11</item>
        <item>@string/item_12</item>
        <item>@string/item_13</item>
        <item>@string/item_14</item>
        <item>@string/item_15</item>
        <item>@string/item_16</item>
        <item>@string/item_17</item>
        <item>@string/item_18</item>
    </string-array>
    <string name="count_reset">All counts set to 0</string>
    <string name="nav_home">Home</string>
    <string name="nav_help">Support</string>
    <string name="nav_about">About</string>
    <string name="nav_exit">Exit</string>
    <string name="thank_you_message">Thank you for using Easy Laundry</string>
    <string name="help_message">Any suggestions?\nAny queries?\nFeel free to contact</string>
    <string name="support_email">arnabmaji1999@gamil.com</string>
    <string name="email_info">Feedback welcomed at\narnabmaji1999@gmail.com</string>
    <string name="donate">Appreciate out work\nConsider donating&#8230;</string>
    <string name="social_links_info">Our social links</string>
    <string name="help_info">Want to help in\nimproving the experience.\nSource available at GitHub</string>
    <string name="github_source_text">Take me to source</string>
    <string name="copyright_notice">©2019 Arnab Maji, All Rights Reserved.</string>
    <string name="app_description">Easy Laundry\nVersion: 3.0\nDeveloper: Arnab Maji</string>
    <string name="thanks_textview">Thank you for using this app!\nAny suggestions, Any queries?\nFeel free to contact!</string>
    <string name="gh_social_media">Github</string>
    <string name="fb_social_media">Facebook</string>
    <string name="ig_social_media">Instagram</string>
    <string name="wp_social_media">Whatsapp</string>
    <string name="action_reset">Reset</string>
    <string name="save">Save</string>
    <string name="history">History</string>
    <string name="last_three_saves">Your Last three saves</string>
    <string name="all_saved_toast_message">All Information has been saved!</string>
</resources>
