<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
        <group android:checkableBehavior="single">
                <item
                    android:id="@+id/home_frag"
                    android:icon="@drawable/ic_home_black_24dp"
                    android:title="@string/nav_home"/>
                <item
                    android:id="@+id/get_support"
                    android:icon="@drawable/ic_help"
                    android:title="@string/nav_help" />
                <item
                    android:id="@+id/app_exit"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/nav_exit" />

        </group>
</menu>